# asmos

./: Cargo.toml  README.md
.cargo/: config.toml
book/: book.toml
cfg/konfigurator/x86_64/vanilla/debug/: Konfigurator.xml
cfg/konfigurator/x86_64/vanilla/release/: Konfigurator.xml
cfg/ld/: x86_64.ld
recipes/: build.rs
scripts/: start.sh
src/: lib.rs  main.rs
src/arch/x86_64/: exceptions.rs  fonts.rs  framebuffer.rs  gdt.rs  idt.rs  memory.rs  meta.rs  mod.rs  serial.rs
src/arch/x86_64/allocator/: bump.rs  linked_list.rs  mod.rs  pool.rs
src/arch/x86_64/memory/: mod.rs  pmm.rs  pmmv2.rs
src/arch/x86_64/memory/phys/: bitmap.rs  dummy.rs  mod.rs
src/arch/x86_64/memory/physical/: bitmap.rs  dummy.rs  mod.rs
src/arch/x86_64/memory/physical/mm/: bitmap.rs  dummy.rs  mod.rs
src/arch/x86_64/memory/virt/: mod.rs
src/arch/x86_64/preliminary/: configurations.rs  mod.rs  multiboot.rs  paging.rs  stack.rs  trampoline.s
src/aux/: log.rs  macros.rs  mod.rs
src/kernel/: mod.rs  serial.rs
src/kernel/arch/: mod.rs
src/kernel/arch/x86_64/: elf.rs  exceptions.rs  gdt.rs  meta.rs  mod.rs  serial.rs
src/kernel/arch/x86_64/preliminary/: configurations.rs  mod.rs  multiboot.rs  paging.rs  stack.rs  trampoline.s
src/kernel/arch/x86_64/prelude/: configurations.rs  main.s  mod.rs  multiboot.rs  paging.rs  raw.s  stack.rs
